--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,19 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'  
-        classpath 'com.google.gms:google-services:3.0.0'
+//        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.1.1' // google-services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    allprojects {
+        // ...
+        repositories {
+            // ...
+            maven {
+                url "https://maven.google.com" // Google's Maven repository
+            }
+        }
     }
 }
 
