--- a/vector/build.gradle
+++ b/vector/build.gradle
@@ -153,7 +153,7 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 
 
-    compile 'com.googlecode.libphonenumber:libphonenumber:8.0.1'
+    compile 'com.googlecode.libphonenumber:libphonenumber:8.2.0'
 
     /************* Matrix SDK management **************/
     // use the matrix SDK as external lib
@@ -194,6 +194,8 @@ dependencies {
     appCompile 'com.google.firebase:firebase-messaging:11.4.2'
     compile 'com.google.firebase:firebase-database:11.4.2'
     appCompile 'com.google.android.gms:play-services-analytics:11.4.2'
+
+    appCompile 'com.github.deano2390:MaterialShowcaseView:1.2.0@aar'
 
 
     // fdroid flavor only
