--- a/vector/build.gradle
+++ b/vector/build.gradle
@@ -5,8 +5,8 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -16,7 +16,7 @@ android {
     defaultConfig {
         applicationId "im.vector"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         // use the version code
         versionCode rootProject.ext.versionCodeProp
         versionName rootProject.ext.versionNameProp
@@ -154,10 +154,10 @@ dependencies {
 
     compile 'me.leolin:ShortcutBadger:1.1.2@aar'
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
@@ -206,17 +206,19 @@ dependencies {
     /************* flavors management **************/
 
     // app flavor only
-    appCompile 'com.google.firebase:firebase-core:11.4.2'
-    appCompile 'com.google.firebase:firebase-messaging:11.4.2'
-    compile 'com.google.firebase:firebase-database:11.4.2'
-    appCompile 'com.google.android.gms:play-services-analytics:11.4.2'
+    appCompile 'com.google.firebase:firebase-core:11.6.0'
+    appCompile 'com.google.firebase:firebase-messaging:11.6.0'
+    compile 'com.google.firebase:firebase-database:11.6.0'
+    appCompile 'com.google.android.gms:play-services-analytics:11.6.0'
 
     appCompile 'com.github.deano2390:MaterialShowcaseView:1.2.0@aar'
 
     // fdroid flavor only
 
-    compile 'com.google.firebase:firebase-auth:11.4.2'
-    compile 'com.google.android.gms:play-services-auth:11.4.2'
+    compile 'com.google.firebase:firebase-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
+
+    compile 'com.firebaseui:firebase-ui-auth:3.0.0'
 }
 
 
